# qconv

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/bench/: CMakeLists.txt
source/bench/add/: CMakeLists.txt
source/bench/add/source/: main.cpp
source/bench/benchutils/include/benchutils/: benchutils.h
source/bench/copy/: CMakeLists.txt
source/bench/copy/source/: main.cpp
source/bench/dilate/: CMakeLists.txt
source/bench/dilate/source/: main.cpp
source/bench/linear/: CMakeLists.txt
source/bench/linear/source/: main.cpp
source/bench/min_max/: CMakeLists.txt
source/bench/min_max/source/: main.cpp
source/bench/min_max_global/: CMakeLists.txt
source/bench/min_max_global/source/: main.cpp
source/bench/min_max_h/: CMakeLists.txt
source/bench/min_max_h/source/: main.cpp
source/bench/qconv/: CMakeLists.txt
source/bench/qconv/source/: main.cpp
source/bench/relu/: CMakeLists.txt
source/bench/relu/source/: main.cpp
source/bench/zero/: CMakeLists.txt
source/bench/zero/source/: main.cpp
source/ext/: CMakeLists.txt
source/ext/benchmark/: CMakeLists.txt
source/ext/googletest/: CMakeLists.txt
source/ext/googletest/googletest-release-1.12.1/googletest/cmake/: internal_utils.cmake
source/ext/simde/: CMakeLists.txt
source/lib/: CMakeLists.txt
source/lib/core/: CMakeLists.txt
source/lib/core/include/core/: paths.h  simdops.h  utils.h
source/lib/core/source/: paths.cpp  utils.cpp
source/lib/layers/: CMakeLists.txt
source/lib/layers/include/layers/: add.h  bias.h  common.h  linear.h  linear_naive.h  qconv.h  qconv_naive.h  qconv_thick.h  tile.h
source/lib/layers/source/: linear.cpp  linear_naive.cpp  qconv.cpp  qconv_naive.cpp  qconv_thick.cpp  tile.cpp
source/lib/simd/: CMakeLists.txt
source/lib/simd/include/simd/: simd.h
source/lib/simdops/: CMakeLists.txt
source/lib/simdops/include/simdops/: simdops.h
source/lib/simdops/source/: simdops.cpp
source/misc/godbolt/: add_naive.cpp  add_simdops.cpp  copy_memcopy.cpp  copy_naive.cpp  copy_simdops.cpp  min_h_naive.cpp  min_h_simdops.cpp  min_naive_h.cpp  zero_naive.cpp  zero_simdops.cpp
source/scripts/: bench.sh  build.sh  configure.sh  test.sh
source/scripts/misc/docker/: Dockerfile  build.sh  run.sh
source/scripts/misc/objdump/: objdump.sh
source/scripts/test/: generate_dummy_data.sh  generate_dummy_nnue.sh  load_dummy_data.sh  nnue_load.sh  nnue_zero.sh
source/test/: CMakeLists.txt
source/test/lib/: CMakeLists.txt
source/test/lib/layers/: CMakeLists.txt  TestLinear.cpp  TestQConv.cpp
source/test/lib/operations/: CMakeLists.txt
source/test/lib/simdops/: CMakeLists.txt  TestMinMaxGlobal.cpp  TestMinMaxH.cpp
source/test/testutils/: CMakeLists.txt
source/test/testutils/include/testutils/: testutils.h
source/test/testutils/source/: testutils.cpp
