cmake_minimum_required(VERSION 3.15)
project(quantitized_convolution)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
if (NOT ${CMAKE_BUILD_ARCH} STREQUAL "oldarch")
add_compile_options(-msse3 -DUSE_SSSE3 -mpopcnt -DUSE_POPCNT -DUSE_AVX2 -mavx2 -DUSE_SSE41 -msse4.1)
endif()
if (${CMAKE_BUILD_TYPE} STREQUAL "release")
add_compile_options(-Wall -Wcast-qual -fno-exceptions -pedantic -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
add_link_options(-Wall -Wcast-qual -fno-exceptions -pedantic -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
add_link_options(-Wl,--no-as-needed)
add_compile_options(-flto=auto)
add_link_options(-flto=auto)
else()
add_compile_options(-Wall -Wcast-qual -fno-exceptions -pedantic -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2 -g)
add_link_options(-m64 -Wl,--no-as-needed)
endif()
add_subdirectory(source)
